<resources>
    <string name="app_name">Aural Learner</string>
    <string name="mainMenuExercisesHeading">Exercise Modes</string>
    <string name="intervalMenuBtn">Intervals</string>
    <string name="melodiesMenuBtn">Melodies</string>
    <string name="voiceControlHelp">To use voice control, say \'menu\', followed by a command.
        Available commands at present are \'pitch matching\', \'intervals\', \'scales\', \'melodies\', \'terminology\', \'help\', and \'about\'.
        You can say \'intervals\' or \'melodies\', followed by \'easy\', \'medium\', or \'hard\' to open the exercise with the given difficulty.
        You can also say \'stop speaking\' to stop the text-to-speech, and \'cancel\' to cancel voice control.
        Voice control is only available outside of exercises, if you need to quit an exercise use the back button on your device.
        If you need this help section again at a later time, say \"menu\", followed by \"help\".</string>
    <string name="permissionsExplanation">This app needs to record audio for voice recognition and the music exercises to work, also this app needs to write to external storage to setup voice recognition.</string>
    <string name="pitchMatching_targetPitchLabel">Target Pitch</string>
    <string name="pitchMatching_titleLabel">Pitch Matching</string>
    <string name="pitchMatching_pitchDifferenceLabel">Difference</string>
    <string name="startBtnLabel">Start</string>
    <string name="stopBtnLabel">Stop</string>
    <string name="pitchMatching_playTargetPitchBtnLabel">Play Target Pitch</string>
    <string name="pitchMatching_stopTargetPitchBtnLabel">Stop Playback</string>
    <string name="pitchMatching_changeTargetPitchBtnLabel">Change Target Pitch</string>
    <string name="pitchMatchingMenuBtnLabel">Pitch Matching</string>
    <string name="viewHelpBtnLabel">Voice Control Help</string>
    <string name="mainMenuMiscHeading">Help</string>
    <string name="permissionsExplanationTitle">Permissions This App Uses</string>
    <string name="voiceControlHelpTitle">Voice Control Help</string>
    <string name="dialogOk">OK</string>
    <string name="dialogCancel">Cancel</string>
    <string name="intervals_titleLabel">Intervals Exercise</string>
    <string name="pitchMatching_description">Try match your pitch with the target pitch!</string>
    <string name="pitchMatching_currentPitchLabel">Your Current Pitch</string>
    <string name="intervals_description">Try sing an interval!</string>
    <string name="intervals_targetLabel">Target Interval</string>
    <string name="intervals_playTargetIntervalBtnLabel">Play Target Interval</string>
    <string name="intervals_stopTargetIntervalBtnLabel">Stop Playback</string>
    <string name="intervals_changeTargetIntervalBtnLabel">Change Target Interval</string>
    <string name="intervals_changeTargetRootBtnLabel">Change Interval Root</string>
    <string name="intervals_scoreLabel">Your Score</string>

    <string name="intervalsMenu_title">Choose a difficulty</string>
    <string name="intervalsMenu_difficultyHelpTitle">Intervals Difficulty Levels</string>
    <string name="intervalsMenu_difficultyHelpText">The intervals exercise has three difficulties: easy, medium, and hard. Each difficulty adds more intervals, and includes the intervals from the lower difficulties.
        \n\nEasy starts with four intervals: unision, perfect fourth, perfect fifth, and octave.
        \n\nThe medium difficulty adds the intervals: major second, minor third, major sixth, and minor sixth.
        \n\nThe hard difficulty adds the intervals: minor second, augmented fourth, major seventh, and minor seventh.</string>

    <string name="melodiesMenu_title">Choose a difficulty</string>
    <string name="scalesMenu_difficultyHelpTitle">Scales Difficulty Levels</string>
    <string name="scalesMenu_difficultyHelpText">Each level of difficulty adds new scales to the exercise.
        \n\nThe easy difficulty will test you on the Major scale and the Pentatonic Major scale.
        \n\nMedium will add the scales: Natural Minor, and Pentatonic Minor.
        \n\nThe hard difficulty will add the scales: Harmonic Minor, and Melodic Minor.</string>

    <string name="scalesMenu_title">Choose a difficulty</string>
    <string name="scalesMenuBtn">Scales</string>

    <string name="melodiesMenu_difficultyHelpTitle">Melodies Difficulty Levels</string>
    <string name="melodiesMenu_difficultyHelpText">The melodies exercise has three difficulties: easy, medium, and hard.
        Similar to the scale exercises, each level of difficulty adds more scales, from which the melodies are created.
        \nThe level of difficulty also makes the melodies more challenging by: increasing the length of the melody;
        increasing the maximum jump between notes in the melody; increasing the range of the melody;
        and reversing the direction of the melody with increasing chance.

        \nThe scales tested for each difficulty are as follows:
        \n\nThe easy difficulty will test you on the Major scale and the Pentatonic Major scale.
        \n\nMedium will add the scales: Natural Minor, and Pentatonic Minor.
        \n\nThe hard difficulty will add the scales: Harmonic Minor, and Melodic Minor.</string>

    <string name="aboutBtn">About</string>
    <string name="aboutTitle">About</string>
    <string name="aboutText">
        This app is for learning the aural (sound) components of music theory.
        It aims to support people with visual impairments by utilising voice control and text-to-speech.
        There are pitch matching exercises, in which you hear a pitch and match that pitch with your voice;
        interval exercises, in which you do the same thing only with two notes in succession;
        scale exercises, in which you do the same thing with a musical scale;
        and melody exercises, in which you do the same thing with a unique melody.
        If there is any bits of terminology you don\'t understand, you can view the terminology menu to see a list of terms and their meanings.
        If you need any help with the voice commands, say \'help\'.</string>

    <string name="terminologyBtn">Terminology</string>
    <string name="terminologyTitle">Terminology</string>
    <string name="terminologyText">
        Pitch - any single stationary sound, whether it\'s exactly the same as a note or not (for example, you can have a pitch that sounds exactly the same as an A note, or you could have one that sounds slightly off in pitch)
        \n\nNote - A note is the combination of the pitch and duration of a sound.
        \n\nCents - a measure out of one hundred that measures how far away a particular pitch is from a given note.
        \n\nScale - an organized series of notes, from which melodies can be written.
        \n\nMelody - A melody is basically a sequence of notes.
        \nInterval - two difference between two pitches (for example, the interval formed by an A and an A# is a minor second).
    </string>
    <string name="intervals_short_desc">Try sing an interval!</string>
    <string name="melodies_title">Melodies Exercise</string>
    <string name="melodies_short_desc">Try sing a melody!</string>
    <string name="scales_title">Scales Exercise</string>
    <string name="scales_short_desc">Try sing a scale!</string>
</resources>
