<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mainMenuExercisesHeading"
            android:textSize="@dimen/menuTitleTextSize" />

        <Button
            android:id="@+id/pitchMatchingMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pitchMatchingMenuBtnLabel" />

        <Button
            android:id="@+id/intervalsMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intervalMenuBtn" />

        <Button
            android:id="@+id/scalesMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scalesMenuBtn"
            android:visibility="visible" />

        <Button
            android:id="@+id/melodiesMenuBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/melodiesMenuBtn"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mainMenuMiscHeading"
            android:textSize="24sp" />

        <Button
            android:id="@+id/aboutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutBtn" />

        <Button
            android:id="@+id/terminologyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminologyBtn" />

        <Button
            android:id="@+id/voiceControlHelpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewHelpBtnLabel" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
